--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=bc1094525e38a64895211a7a4a1d481b
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://root@127.0.0.1:3306/event_management"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
